Finalisation of the Dijkstra algorithm with the Mexico metro and strands

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "graph.h": "c",
-        "stdlib.h": "c"
-    }
+        "stdlib.h": "c",
+        "stdbool.h": "c"
+    },
+    "cmake.configureOnOpen": false
 }
